# ALICE-LLM

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  README_JP.md
.github/workflows/: bench.yml  ci.yml  release.yml
data/: README.md
docs/: ALICE_ROUTER_SPEC.md  BONSAI_GPU_SUPPORT.md  DEEPSEEK_V2_LITE_VALIDATION.md  HEGEMONY_THESIS.md  KIMI_K3_INTEGRATION.md  MXFP4_INTEGRATION_PLAN.md  PHASE_X_3_E_3_3_VALIDATION.md  PHASE_X_3_E_3_DESIGN.md  ZEROCOPY_ROADMAP.md
examples/: bench_70b_sparse.rs  bench_deepseek_streaming.rs  bench_gpu.rs  bench_gpu_ffn.rs  bench_gpu_forward.rs  bench_gpu_q1_0.rs  bench_simd_matvec.rs  benchmark_elyza.rs  check_qtypes.py  dump_metadata.py  early_exit_qwen35.rs  elyza_gguf.rs  elyza_single_token.rs  entropy_mod_qwen35.rs  entropy_ppl_correlation_qwen35.rs  extract_embedding.py  forward_debug.rs  full_forward_python.py  full_forward_vectorized.py  generate_gpu.rs  l7_entropy_signal_qwen35.rs  layer_debug.rs  logits_compare.rs  lol_gen.rs  matvec_verify.rs  perplexity.rs  qwen_gpu.rs  reference_logits.py  speculative_dual.rs  speculative_dual_gpu.rs  speculative_gpu.rs  test_1b.rs  test_q3k.rs  tokenizer_debug.rs  verify_gemma3n_config.rs  verify_gemma3n_forward.rs  verify_gemma3n_tokenizer.rs  verify_gemma4_forward.rs  verify_layer0.py  verify_speculative.rs  (+1 more)
scripts/: v2lite_hf_oracle.py  v2lite_hf_per_op_dump.py
src/: attention.rs  batch_inference.rs  deepseek_streaming.rs  gguf.rs  gpu.rs  integration_tests.rs  kv_cache.rs  lib.rs  linalg.rs  llama3.rs  matrix.rs  prelude.rs  quantization.rs  rope.rs  sampling.rs  tokenizer.rs  training.rs
src/grammar/: fsm.rs  gbnf.rs  mod.rs
src/shaders/: add_bias.wgsl  attention.wgsl  beta_sigmoid.wgsl  conv1d_causal.wgsl  dequant_matvec_q1_0.wgsl  dequant_matvec_q1_0_batch4.wgsl  dequant_matvec_q1_0_row4.wgsl  dequant_matvec_q1_0_row4_batch4.wgsl  dequant_matvec_q1_0_row8_batch4.wgsl  dequant_matvec_q4k.wgsl  dequant_matvec_q4k_batch4.wgsl  dequant_matvec_q5k.wgsl  dequant_matvec_q6k.wgsl  dequant_matvec_q6k_batch4.wgsl  dequant_matvec_q8_0.wgsl  gated_deltanet.wgsl  kv_cache_append.wgsl  qk_norm.wgsl  residual_add.wgsl  rmsnorm.wgsl  rope.wgsl  sigmoid_gate_apply.wgsl  silu_gate_apply.wgsl  silu_inplace.wgsl  silu_mul.wgsl  ssm_discretisation.wgsl  swiglu_fused_q1_0.wgsl  swiglu_fused_q4k.wgsl  swiglu_fused_q4k_batch4.wgsl
