[package]
name = "alice-llm"
version = "1.0.0"
edition = "2021"
authors = ["Moroya Sakamoto"]
license = "AGPL-3.0-or-later"
description = "ALICE LLM inference engine: tokenizer, KV cache, attention, RoPE, quantization, sampling, batch inference"

[lib]
crate-type = ["rlib"]

[features]
default = ["std"]
std = []
gguf = ["dep:memmap2"]
parallel = ["dep:rayon"]
gpu = ["dep:wgpu", "dep:pollster", "dep:bytemuck"]
server = ["dep:axum", "dep:tokio", "dep:serde", "dep:serde_json", "gpu", "gguf"]

[dependencies]
memmap2 = { version = "0.9", optional = true }
rayon = { version = "1.10", optional = true }
wgpu = { version = "24", optional = true }
pollster = { version = "0.4", optional = true }
bytemuck = { version = "1", features = ["derive"], optional = true }
axum = { version = "0.8", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

[[example]]
name = "elyza_gguf"
required-features = ["gguf"]

[[example]]
name = "logits_compare"
required-features = ["gguf"]

[[example]]
name = "bench_70b_sparse"
required-features = ["gguf"]

[[example]]
name = "speculative_dual"
required-features = ["gguf"]

[[example]]
name = "test_1b"
required-features = ["gguf"]

[[example]]
name = "test_q3k"
required-features = ["gguf"]

[[example]]
name = "bench_gpu"
required-features = ["gguf", "gpu"]

[[example]]
name = "bench_gpu_ffn"
required-features = ["gguf", "gpu"]

[[example]]
name = "bench_gpu_forward"
required-features = ["gguf", "gpu"]

[[example]]
name = "generate_gpu"
required-features = ["gguf", "gpu"]

[[example]]
name = "speculative_gpu"
required-features = ["gguf", "gpu"]

[[example]]
name = "speculative_dual_gpu"
required-features = ["gguf", "gpu"]

[[bin]]
name = "alice-llm-server"
path = "src/bin/server.rs"
required-features = ["server"]
